--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7d78e538",
    "metadata": {},
    "outputs": [
@@ -137,31 +137,40 @@
     }
    ],
    "source": [
+    "# Создаём исходную матрицу\n",
     "random_matrix = [\n",
     "   [9, 2, 1],\n",
     "   [2, 5, 3],\n",
     "   [4, 8, 5]\n",
     "]\n",
+    "\n",
+    "# Создаём рабочие пустые списки для заполнения результатами\n",
     "min_value_rows = []\n",
     "min_index_rows = []\n",
     "max_value_rows = []\n",
     "max_index_rows = []\n",
+    "\n",
+    "#Проходим циклом по матрице (по входящим в неё строкам)\n",
     "for row in random_matrix:\n",
     "    min_index = 0\n",
     "    min_value = row[min_index]\n",
     "    max_index = 0\n",
     "    max_value = row[max_index]\n",
-    "    for index_col in range(len(row)):\n",
+    "    for index_col in range(len(row)): #Проходим циклом по каждой строке матрицы\n",
     "        if row[index_col] < min_value: \n",
     "            min_value = row[index_col]\n",
     "            min_index = index_col\n",
     "        if row[index_col] > max_value: \n",
     "            max_value = row[index_col]\n",
     "            max_index = index_col\n",
+    "    \n",
+    "    #Добавляем в списки полученные в циклах результаты:\n",
     "    min_value_rows.append(min_value)\n",
     "    min_index_rows.append(min_index)\n",
     "    max_value_rows.append(max_value)\n",
     "    max_index_rows.append(max_index)\n",
+    "\n",
+    "#Выводим результаты на печать\n",
     "print(\"Minimal elements:\", min_value_rows) # минимальные элементы\n",
     "print(\"Their indices:\", min_index_rows) # их индексы\n",
     "print(\"Maximal elements:\", max_value_rows) # максимальные элементы\n",
@@ -172,6 +181,98 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d875674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "065ef825",
+   "metadata": {},
+   "source": [
+    "# Функция возвращает ошибку, если данные некорректны\n",
+    "\n",
+    "Дана функция add_mark. Дополните её код таким образом, чтобы возникала ошибка ValueError с текстом \"Invalid Mark!\" при попытке поставить оценку не из списка: 2, 3, 4 или 5.\n",
+    "\n",
+    "Пример:\n",
+    "\n",
+    "#add_mark('Ivanov', 6)\n",
+    "\n",
+    "#ValueError: Invalid Mark!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cecb9f8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Исходная функция\n",
+    "def add_mark(name, mark, journal=None):\n",
+    "   #Добавьте здесь проверку аргумента mark\n",
+    "    if journal is None:\n",
+    "        journal = {}\n",
+    "    journal[name] = mark\n",
+    "    return journal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c5fb034b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Invalid mark!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16368/1371948558.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;31m# Пробуем добавить некорректную оценку:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0madd_mark\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Ivanov'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16368/1371948558.py\u001b[0m in \u001b[0;36madd_mark\u001b[1;34m(name, mark, journal)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0madd_mark\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmark\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjournal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmark\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Invalid mark!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mjournal\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mjournal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m \u001b[1;31m#создаём словарик внутри функции, поскольку это изменяемый объект, кот. нежелательно отправлять в параметрах функции.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Invalid mark!"
+     ]
+    }
+   ],
+   "source": [
+    "# Решение задачи\n",
+    "def add_mark(name, mark, journal=None):\n",
+    "    if mark not in [2,3,4,5]:\n",
+    "        raise ValueError('Invalid mark!')\n",
+    "    if journal is None:\n",
+    "        journal = {} #создаём словарик внутри функции, поскольку это изменяемый объект, кот. нежелательно отправлять в параметрах функции.\n",
+    "    journal[name] = mark\n",
+    "    return journal\n",
+    "\n",
+    "# Пробуем добавить некорректную оценку:\n",
+    "print(add_mark('Ivanov', 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7db9e22e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Sidorov': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Пробуем добавить корректную оценку:\n",
+    "print(add_mark('Sidorov', 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96e5eae6",
    "metadata": {},
    "outputs": [],
    "source": []
