--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "065ef825",
+   "id": "1cd464b1",
    "metadata": {},
    "source": [
     "# Функция возвращает ошибку, если данные некорректны\n",
@@ -196,15 +196,15 @@
     "\n",
     "Пример:\n",
     "\n",
-    "#add_mark('Ivanov', 6)\n",
+    "add_mark('Ivanov', 6)\n",
     "\n",
-    "#ValueError: Invalid Mark!"
+    "ValueError: Invalid Mark!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cecb9f8a",
+   "id": "aeba2c2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5fb034b",
+   "id": "a6a6f7cd",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7db9e22e",
+   "id": "08552f9d",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e5eae6",
+   "id": "3a25c2cb",
    "metadata": {},
    "outputs": [],
    "source": []
